# NFT-based-USDC-staking-contract-Solana

solana_anchor/: Cargo.toml
solana_anchor/src/: lib.rs
